[package]
name = "axum-tower-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
futures = "0.3.21"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
tower-http = { version = "0.2.5", features = [ "auth" ] }
